force-app/main/default/objects/Territory_Master__c/Territory_Master__c.object-meta.xml
<CustomObject>
    <label>Territory Master</label>
    <pluralLabel>Territory Masters</pluralLabel>
    <nameField>
        <label>Territory Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Territory definitions supplementing Territory2 with geo-fencing and pincode mapping (MOD-01 Master Data Management)</description>
</CustomObject>