force-app/main/default/objects/Territory_Master__c/fields/Geo_Fence_Lat__c.field-meta.xml
<CustomField>
    <fullName>Geo_Fence_Lat__c</fullName>
    <label>Geo Fence Latitude</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>7</scale>
</CustomField>