force-app/main/default/objects/Territory_Master__c/fields/Geo_Fence_Radius__c.field-meta.xml
<CustomField>
    <fullName>Geo_Fence_Radius__c</fullName>
    <label>Geo Fence Radius</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
</CustomField>