force-app/main/default/objects/Territory_Master__c/fields/Pincode_List__c.field-meta.xml
<CustomField>
    <fullName>Pincode_List__c</fullName>
    <label>Pincode List</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>