force-app/main/default/objects/Territory_Master__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Lookup</type>
    <referenceTo>Company_Hierarchy__c</referenceTo>
    <relationshipLabel>Territory Masters</relationshipLabel>
    <relationshipName>Territory_Masters</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>